# skse-plugin-definition

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  example-plugin.cpp  vcpkg-configuration.json  vcpkg.json
include/: SksePluginDefinition.h
include/SksePluginDefinition/: SksePluginDefinition.h  SksePluginDefinitionMacros.h
